--- a/project_t2/linguistic_diversity_t2.ipynb
+++ b/project_t2/linguistic_diversity_t2.ipynb
@@ -1783,7 +1783,7 @@
     "# Load the CSV file\n",
     "df = pd.read_csv('updated_Linguistic_diversity_index.csv')\n",
     "\n",
-    "# Sort the DataFrame by 'LDI' in descending order and get the top 10 rows\n",
+    "# Sort the DataFrame by 'LDI' in ascending order and get the top 10 rows\n",
     "bottom_10 = df.sort_values('LDI', ascending=True).head(10)\n",
     "print (bottom_10)\n",
     "\n",
